@@ -4,7 +4,7 @@
 All the matplotlib support code was co-developed with John Hunter,
 matplotlib's author.
 
-$Id: Shell.py 1079 2006-01-24 21:52:31Z vivainio $"""
+$Id: Shell.py 1297 2006-05-13 19:14:48Z fperez $"""
 
 #*****************************************************************************
 #       Copyright (C) 2001-2006 Fernando Perez <fperez@colorado.edu>
@@ -337,7 +337,7 @@ class MTInteractiveShell(InteractiveShell):
         Multithreaded wrapper around IPython's runcode()."""
 
         # lock thread-protected stuff
-        self.thread_ready.acquire(False)
+        got_lock = self.thread_ready.acquire(False)
 
         # Install sigint handler
         try:
@@ -365,7 +365,8 @@ class MTInteractiveShell(InteractiveShell):
             InteractiveShell.runcode(self,code_to_run)
             
         # We're done with thread-protected variables
-        self.thread_ready.release()
+        if got_lock:
+            self.thread_ready.release()
         # This MUST return true for gtk threading to work
         return True
 
